<resources>
    <string name="app_name">FEEDNESS</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">239138860634073</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb239138860634073</string>

    <string name="get_started_button">Get Started!</string>
    <string name="welcome_string">A Simple Way to Keep Track of Your Calories</string>
    <string name="drawer_name">Name</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Closed</string>

    <string name="calories_tab">Calories</string>
    <string name="macros_tab">Macros</string>
    <string name="pick_date_string">Pick a Date to Show Nutritional Data</string>
    <string name="confirm_button">Confirm</string>
    <string name="goals_activity_header">Goals</string>
    <string name="calendar_activity_header">Calendar</string>
    <string name="profile_activity_header">Profile</string>
    <string name="settings_activity_header">Settings</string>
    <string name="add_meal_activity_header">Add Meal</string>
    <string name="carb_macro">Carbohydrates:</string>
    <string name="fat_macro">Fats:</string>
    <string name="protein_macro">Proteins:</string>
    <string name="macros_tab_header">Today\'s Progress:</string>
    <string name="step_counter_activity_header">Step Counter</string>
    <string name="weight_unit" translatable="false">kg</string>
    <string name="weight_unit_goal" translatable="false">%1$dkg</string>
    <string name="current_weight">Current weight:</string>
    <string name="goal_weight">Goal Weight:</string>
    <string name="add_a_meal">Type a Meal Along with Its Amount</string>
    <string name="date_string">Date</string>
    <string name="steps_string">Steps</string>
    <string name="general">General</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="version_number">Version 0.3.1</string>
    <string name="copyright">Copyright 2020, FEEDNESS No Rights Reserved</string>
    <string name="about_us_activity_header">About Us</string>
    <string name="add_a_meal_here">Add A Meal Here</string>
    <string name="meals_today">Meals Today:</string>
    <string name="name">Name:</string>
    <string name="goal_calories">Goal Calories:</string>
    <string name="goal_carbs">Goal Carbs:</string>
    <string name="goal_fats">Goal Fats:</string>
    <string name="goal_proteins">Goal Proteins:</string>
    <string name="calories_unit">kcal</string>
    <string name="macros_unit">g</string>
    <string name="add_an_amount">Amount</string>
    <string name="add_meal_error">Invalid Entry, Please Try Again</string>
    <string name="calories">Calories:</string>
    <string name="empty_calories">/0 kcal</string>
    <string name="empty_macros">/0g</string>
    <string name="dash_calories">/%1$d kcal</string>
    <string name="dash_macros">/%1$dg</string>
    <string name="calories_unit_goal">%1$d kcal</string>
    <string name="macros_unit_goal">%1$dg</string>
    <string name="historical_data_activity_header">Historical Data</string>
</resources>
