<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".goals.GoalsActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/goal_weight" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            style="@style/NormalText"
            android:id="@+id/goal_weight_goals" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/goal_calories" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/NormalText"
            android:id="@+id/goal_calories_goals" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/goal_carbs" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/NormalText"
            android:id="@+id/goal_carbs_goals" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/goal_fats" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/NormalText"
            android:id="@+id/goal_fats_goals" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/goal_proteins" />
        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            style="@style/NormalText"
            android:id="@+id/goal_proteins_goals" />

    </GridLayout>

</LinearLayout>