<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MacrosFragment"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/macros_tab_header"
        android:textColor="@color/colorDarkText"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/calories"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_row="0"
            style="@style/NormalText"
            android:layout_column="1"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/calories_amount"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="wrap_content"
            android:layout_row="0"
            style="@style/NormalText"
            android:layout_column="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/carb_macro"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/carb_macro"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_row="1"
            style="@style/NormalText"
            android:layout_column="1"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/carb_macro_amount"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="wrap_content"
            android:layout_row="1"
            style="@style/NormalText"
            android:layout_column="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/fat_macro"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/fat_macro"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_row="2"
            style="@style/NormalText"
            android:layout_column="1"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/fat_macro_amount"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="wrap_content"
            android:layout_row="2"
            style="@style/NormalText"
            android:layout_column="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_columnWeight="3"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/NormalText"
            android:text="@string/protein_macro"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/protein_macro"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/NormalText"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/protein_macro_amount"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            style="@style/NormalText" />

    </GridLayout>

</LinearLayout>